Fixed small spacing and translation error

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -141,5 +141,5 @@ fieldset {
     position: absolute;
     max-width: 200px;
     left: 90px;
-    top: -12px;
+    top: -14px;
 }
